crates/sui-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-3.snap
---
source: crates/sui-config/tests/snapshot_tests.rs
expression: genesis.sui_system_object()
---
new_dummy_field: 100
epoch: 0
protocol_version: 3
system_state_version: 2
validators:
  total_stake: 25000000000000000
  active_validators:
    - metadata:
        sui_address: "0x73a6b3c33e2d63383de5c6786cbaca231ff789f4c853af6d54cb883d8780adc0"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 13
          - 125
          - 171
          - 53
          - 140
          - 141
          - 173
          - 170
          - 78
          - 250
          - 0
          - 73
          - 167
          - 91
          - 7
          - 67
          - 101
          - 85
          - 177
          - 10
          - 54
          - 130
          - 25
          - 187
          - 104
          - 15
          - 112
          - 87
          - 19
          - 73
          - 215
          - 117
        worker_pubkey_bytes:
          - 13
          - 125
          - 171
          - 53
          - 140
          - 141
          - 173
          - 170
          - 78
          - 250
          - 0
          - 73
          - 167
          - 91
          - 7
          - 67
          - 101
          - 85
          - 177
          - 10
          - 54
          - 130
          - 25
          - 187
          - 104
          - 15
          - 112
          - 87
          - 19
          - 73
          - 215
          - 117
        proof_of_possession_bytes:
          - 176
          - 81
          - 164
          - 232
          - 143
          - 71
          - 217
          - 26
          - 206
          - 233
          - 63
          - 195
          - 47
          - 30
          - 65
          - 201
          - 145
          - 199
          - 195
          - 120
          - 45
          - 204
          - 61
          - 44
          - 156
          - 62
          - 176
          - 15
          - 202
          - 179
          - 6
          - 85
          - 117
          - 235
          - 141
          - 16
          - 201
          - 85
          - 81
          - 255
          - 154
          - 70
          - 63
          - 157
          - 87
          - 56
          - 150
          - 193
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: []
        p2p_address: []
        primary_address: []
        worker_address: []
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
      voting_power: 10000
      operation_cap_id: "0x16bb51edad1714f14cae3a3b1265f619900cee6126bafed1e743e68f2928a536"
      gas_price: 1
      staking_pool:
        id: "0xb0cf62387a5526d51debd3ee28576c60417ba2e8187b94f7d311a312ba0c4c08"
        activation_epoch: 0
        deactivation_epoch: ~
        sui_balance: 25000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 25000000000000000
        exchange_rates:
          id: "0x4d3f360db730ab473ac315c7d5c96840698e1bf49b8e5bb3d49047c8d131519b"
          size: 1
        pending_stake: 0
        pending_total_sui_withdraw: 0
        pending_pool_token_withdraw: 0
      commission_rate: 0
      next_epoch_stake: 25000000000000000
      next_epoch_gas_price: 1
      next_epoch_commission_rate: 0
  pending_active_validators:
    contents:
      id: "0xeca89a922a8cc4f984973ba697f4a4c4c1f37f41bddaa96e29de0d1e924ad550"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0x21b9800ce7318a8f51d3672e177e67635cbcec39fc0f36ea64e620967b4a63dd"
    size: 1
  inactive_pools:
    id: "0x3461b4ad7e16e4f2e9477d40f0c47ab4c7019fb761e3b4e312ba2ce69c84a3cc"
    size: 0
  validator_candidates:
    id: "0x5285255b1da4e1124de1ec08c5e632851134bb18966e8eddf0b8a1f84b50edca"
    size: 0
  at_risk_validators:
    contents: []
storage_fund:
  value: 0
parameters:
  governance_start_epoch: 0
  epoch_duration_ms: 86400000
reference_gas_price: 1
validator_report_records:
  contents: []
stake_subsidy:
  epoch_counter: 0
  balance:
    value: 100000000000000000
  current_epoch_amount: 1000000000000000
safe_mode: false
epoch_start_timestamp_ms: 10

